chore: React compiler 적용

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "babel-plugin-react-compiler": "19.0.0-beta-decd7b8-20250118",
     "eslint": "^9",
     "eslint-config-next": "15.1.5",
     "typescript": "^5"
