--- a/package.json
+++ b/package.json
@@ -16,11 +16,17 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
+    "rehype-pretty-code": "^0.14.0",
+    "rehype-slug": "^6.0.0",
     "remark": "^15.0.1",
-    "remark-html": "^16.0.1"
+    "remark-breaks": "^4.0.0",
+    "remark-gfm": "^4.0.0",
+    "remark-html": "^16.0.1",
+    "shiki": "^2.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@fec/remark-a11y-emoji": "^4.0.2",
     "@pandacss/dev": "^0.51.1",
     "@types/node": "^20",
     "@types/react": "^19",
