--- a/package.json
+++ b/package.json
@@ -35,5 +35,10 @@
     "eslint": "^9",
     "eslint-config-next": "15.1.5",
     "typescript": "^5"
+  },
+  "pnpm": {
+    "patchedDependencies": {
+      "rehype-pretty-code@0.14.0": "patches/rehype-pretty-code@0.14.0.patch"
+    }
   }
 }
