--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mdx-js/loader": "^3.1.0",
+    "@mdx-js/react": "^3.1.0",
+    "@next/mdx": "^15.1.6",
+    "@types/mdx": "^2.0.13",
     "gray-matter": "^4.0.3",
     "next": "15.1.5",
     "next-mdx-remote": "^5.0.0",
