--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mdx-js/react": "^3.1.0",
     "@next/mdx": "^15.1.6",
     "@types/mdx": "^2.0.13",
+    "github-slugger": "^2.0.0",
     "gray-matter": "^4.0.3",
     "next": "15.1.5",
     "next-mdx-remote": "^5.0.0",
