--- a/package.json
+++ b/package.json
@@ -45,5 +45,6 @@
     "patchedDependencies": {
       "rehype-pretty-code@0.14.0": "patches/rehype-pretty-code@0.14.0.patch"
     }
-  }
+  },
+  "packageManager": "pnpm@9.0.0"
 }
