--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/mdx": "^2.0.13",
     "github-slugger": "^2.0.0",
     "gray-matter": "^4.0.3",
+    "motion": "^12.16.0",
     "next": "15.1.5",
     "next-mdx-remote": "^5.0.0",
     "react": "^19.0.0",
